New AssignEditor